--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  youtube_explode_dart: ^1.10.8
+  spotify: ^0.7.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
