--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A spotify downloader
 publish_to: 'none'
 
 
-version: 1.0.0+1
+version: '0.0.1'
 
 environment:
   sdk: '>=2.15.0 <3.0.0'
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   youtube_explode_dart: ^1.10.8
   spotify: ^0.7.0
+  permission_handler: ^6.1.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
