--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   youtube_explode_dart: ^1.10.8
   spotify: ^0.7.0
-  permission_handler: ^6.1.1
+  permission_handler: ^8.3.0
+  path_provider: ^2.0.8
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
