--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   spotify: ^0.7.0
   permission_handler: ^8.3.0
   path_provider: ^2.0.8
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
