--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A spotify downloader
 publish_to: 'none'
 
 
-version: '0.0.1'
+version: '0.0.3'
 
 environment:
   sdk: '>=2.15.0 <3.0.0'
@@ -19,6 +19,8 @@ dependencies:
   permission_handler: ^8.3.0
   path_provider: ^2.0.8
   shared_preferences: ^2.0.11
+  dart_tags: ^0.3.1
+  ffmpeg_kit_flutter: ^4.5.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
