--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ dependencies:
   permission_handler: ^8.3.0
   path_provider: ^2.0.8
   shared_preferences: ^2.0.11
-  dart_tags: ^0.3.1
-  ffmpeg_kit_flutter: ^4.5.1
+  dart_tags: ^0.4.0
+  ffmpeg_kit_flutter_audio: ^4.5.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
